Ledger overhead cleared and better crash safety.